doing design touchups

--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 <body>
     <div class="container">
         <div class="header">
-            <label for="search"><img src="" alt="magnifying glass">
-            <input type="text" name="search" class="search-bar">
-            <a href="#"><img src="" alt="notification"></a>
-            <a href="#"><img src="" alt="profile"></a>
-            <p><img src="" alt="profile">Hi there,<br><h2>NAME</h2></p>
+            <div class="search-box">
+                <label for="search"><img src="" alt="magnifying glass"></label>
+                <input type="text" name="search" class="search-bar">
+            </div>
+            <div class="right-bar">
+                <a href="#"><img src="" alt="notification"></a>
+                <a href="#"><img src="" alt="profile"></a>
+            </div>
+            <div class="welcome-bar">
+                <p><img src="" alt="profile">Hi there,</p>
+                <h2>NAME</h2>
+            </div>
             <ul class="content-buttons">
-                <li><a href="#">New</a></li>
-                <li><a href="#">Upload</a></li>
-                <li><a href="#">Share</a></li>
+                <li><button href="#">New</button></li>
+                <li><button href="#">Upload</button></li>
+                <li><button href="#">Share</button></li>
             </ul>
 
         </div>
